[package]
name = 'dsm'
description = 'Simplified version manager for the Dart SDK'
version = '0.1.3'
authors = ['Yakiyo <yakiyo1206@gmail.com>']
edition = '2021'
license = 'MIT'
repository = 'https://github.com/Yakiyo/dsm'
homepage = 'https://github.com/Yakiyo/dsm'
exclude = ['.devcontainer/**', '.github/**', '.vscode/**', 'tests/**', '.gitignore', 'tools/**', 'site/**']

[dependencies]
clap = { version = '3.2.25', features = ['derive', 'env'] }
anyhow = '1.0.71'
dart-semver = '0.1.3'
human-panic = '1.1.4'
tempfile = '3.5.0'
ureq = '2.6.2'
yansi = '0.5.1'
zip = '0.6.5'
serde_json = "1.0.99"
clap_complete = "3.2.5"

[target.'cfg(windows)'.dependencies]
junction = '1.0.0'

[profile.release]
panic = 'abort'
codegen-units = 1
lto = true
strip = true
