[package]
name = 'dsm'
description = 'Simplified version manager for the Dart SDK'
version = '1.0.1'
authors = ['Yakiyo <yakiyo1206@gmail.com>']
edition = '2021'
license = 'MIT'
repository = 'https://github.com/Yakiyo/dsm'
homepage = 'https://github.com/Yakiyo/dsm'
exclude = ['.devcontainer/**', '.github/**', '.vscode/**', 'tests/**', '.gitignore', 'tools/**', 'site/**', 'pkg/**']

[dependencies]
clap = { version = '4.4.10', features = ['derive', 'env'] }
anyhow = '1.0.71'
tempfile = '3.5.0'
ureq = '2.6.2'
yansi = '0.5.1'
zip = '0.6.5'
serde_json = "1.0.99"
clap_complete = "4.4.4"
home = "0.5.5"
log = "0.4.19"
env_logger = "0.10.0"

[target.'cfg(windows)'.dependencies]
junction = '1.0.0'

[profile.release]
panic = 'abort'
codegen-units = 1
lto = true
strip = true
